--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 	    <script src="https://fb.me/react-dom-15.1.0.js"></script>
 	    <script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-		<script type="text/babel" src="functions.jsx"></script>
+		<script type="text/babel" src="https://nyscherm.github.io/react-todo/functions.jsx"></script>
 	</body>
 </html>
